--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       .tab{flex:1 1 auto; text-align:center}
     }
   </style>
+  <script type='text/javascript' src='//pl27894239.effectivegatecpm.com/39/fb/92/39fb92fcfce6320350d128bf7f5be501.js'></script>
 </head>
 <body>
   <div class="shell">
@@ -158,3 +159,4 @@
   </script>
 </body>
 </html>
+
