--- a/index.html
+++ b/index.html
@@ -83,30 +83,31 @@
       .tab{flex:1 1 auto; text-align:center}
     }
   </style>
-  <style>
-  #leftAd {
-    position: fixed;
-    top: 100px;     /* distance from the top */
-    left: 10px;     /* distance from the left edge */
-    width: 160px;
-    height: 300px;
-    z-index: 1000;  /* make sure it stays on top */
-  }
+	<style>
+#adSidebar {
+  position: fixed;
+  top: 100px;
+  right: 10px;
+  width: 300px;
+  z-index: 1000;
+}
 </style>
 </head>
 <body>
-	<div id="leftAd">
-  <script type="text/javascript">
-    atOptions = {
-      'key' : 'b9a8ee1ba3420ea09389b8b49af05326',
-      'format' : 'iframe',
-      'height' : 300,
-      'width' : 160,
-      'params' : {}
-    };
-  </script>
-  <script type="text/javascript" src="//www.highperformanceformat.com/b9a8ee1ba3420ea09389b8b49af05326/invoke.js"></script>
-</div>
+	
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2050361550970179"
+     crossorigin="anonymous"></script>
+<!-- ad1 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2050361550970179"
+     data-ad-slot="8042395751"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+	
   <div class="shell">
     <div class="top">
       <div class="brand">Simple Property Tools</div>
@@ -179,6 +180,7 @@
   </script>
 </body>
 </html>
+
 
 
 
