--- a/index.html
+++ b/index.html
@@ -83,22 +83,9 @@
       .tab{flex:1 1 auto; text-align:center}
     }
   </style>
-
-<style>
-#leftAd {
-  position: fixed;     
-  top: 20px;          
-  left: 10px;          
-  width: 240px;
-  height: 800px;
-  z-index: 1000;       
-}
-</style>
-	
 </head>
 <body>
-	
-<div id="leftAd">
+	<div align="left">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2050361550970179"
     crossorigin="anonymous"></script>
   <ins class="adsbygoogle"
@@ -182,6 +169,7 @@
   </script>
 </body>
 </html>
+
 
 
 
