--- a/index.html
+++ b/index.html
@@ -85,17 +85,6 @@
   </style>
 </head>
 <body>
-	<div align="left">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2050361550970179"
-    crossorigin="anonymous"></script>
-  <ins class="adsbygoogle"
-       style="display:inline-block;width:240px;height:800px"
-       data-ad-client="ca-pub-2050361550970179"
-       data-ad-slot="4193175306"></ins>
-  <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-</div>
 	
   <div class="shell">
     <div class="top">
@@ -145,7 +134,19 @@
         <div><strong>Address:</strong> Melbourne, VIC</div>
       </div>
     </section>
-
+	  
+<div style="margin-top:20px; text-align:center;">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2050361550970179"
+    crossorigin="anonymous"></script>
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-format="autorelaxed"
+       data-ad-client="ca-pub-2050361550970179"
+       data-ad-slot="7222276287"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+</div>
     <footer>© <span id="y"></span> Simple Property Tools</footer>
   </div>
   <script>
@@ -169,6 +170,7 @@
   </script>
 </body>
 </html>
+
 
 
 
