--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2050361550970179"
+     crossorigin="anonymous"></script>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Buy or Rent | Simple Tools</title>
@@ -85,7 +87,18 @@
   </style>
 </head>
 <body>
-	
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2050361550970179"
+     crossorigin="anonymous"></script>
+<!-- ad4 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2050361550970179"
+     data-ad-slot="1772500879"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <div class="shell">
     <div class="top">
       <div class="brand">Simple Property Tools</div>
@@ -134,19 +147,7 @@
         <div><strong>Address:</strong> Melbourne, VIC</div>
       </div>
     </section>
-	  
-<div style="margin-top:20px; text-align:center;">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2050361550970179"
-    crossorigin="anonymous"></script>
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-format="autorelaxed"
-       data-ad-client="ca-pub-2050361550970179"
-       data-ad-slot="7222276287"></ins>
-  <script>
-       (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-</div>
+
     <footer>© <span id="y"></span> Simple Property Tools</footer>
   </div>
   <script>
@@ -170,6 +171,7 @@
   </script>
 </body>
 </html>
+
 
 
 
